travel-car/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  }

html {
  font-size: 16px;
  scroll-behavior: smooth;
  overflow-x: hidden;

}

body {
  font-family: 'Titillium Web', sans-serif;
  font-weight: normal;
  line-height: 1.7;
  color: #777;
  overflow-x: hidden;
  position:relative;

}

a {
  text-decoration: none;
  margin: 0;
  color: rgb(189, 186, 186);
  color:white;
}

.page {
  height: 100vh;
  background-size: cover;
  text-align: center;
}

.burger {
  position: relative;
  height: 44px;
  width: 50px;
  cursor: pointer;
  text-align: left;
  float: right;
  margin-right: 60px;
  margin-top: 50px;
  z-index: 10;
}

.burger-line {
  position: absolute;
  top: 50%;
  height: 3px;
  width: 30px;
  background: #343b32;
  transform: (-50%, -50%);
}
.burger-line:before {
  content: '';
  position: absolute;
  height: 3px;
  width: 45px;
  background: #343b32;
  top: -12px;
}
.burger-line:after {
  content: '';
  position: absolute;
  height: 3px;
  width: 15px;
  background: #343b32;
  top: 12px;
}

.headerImage {
  background-image: url('./camper.png');
  background-size: cover;
  background-position: center;
  position: absolute;
  height: 80vh;
  width: 100%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

  animation: appear;
}

.headerText {
  position: absolute;
  left: 5%;
  top: 25%;
  line-height: 75px;
  display: inline;
  font-size: 35px;
  letter-spacing: 20px;
  color: rgb(255, 255, 255);
  z-index: 1;
  width: auto;
  font-family:helvetica;

  animation: appear 5s;
}

.companyName {
  position: absolute;
  left: 40%;
  top: 78%;
  font-size: 50px;
  color: rgb(255, 255, 255);
  letter-spacing: 10px;
  z-index: 1;
  font-family:helvetica;
  font-size: 25px;
  width: auto;


  animation: appear 6s;
}

.slider {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: rgb(226, 188, 132);
  z-index: -2;
  transform: translateX(100%);

  animation: moveToRight 1.2s;
}

.navigation {
  position: absolute;
  height: 100%;
  width: 300px;
  background-color: rgba(119, 119, 119, 0.26);
  backdrop-filter: blur(4px);
  right: 0px;
  text-decoration: none;

  display: none;

}


@keyframes moveToRight {
  0% {
    transform: translateX(-100%);
  }

  30% {
    transform: translateX(-100%);
  }

  100% {
    transform: translateX(100%);
  }
}

.menuLinks {
  text-decoration: none;
  padding: 0;
  margin: 0;
  list-style-type: none;
  margin-top: 180px;
  align-content: space-evenly;
}

.menuLink {
  font-weight: 700;
  color: white;
  padding-top: 30px;
  padding-bottom: 20px;
  margin-top: 70px;
  letter-spacing: 5px;
  text-transform: uppercase;
  font-size: 0.8rem;
  cursor: pointer;
  user-select: none;
}

.showMenu {
  display: block;
  animation: menuAppear 0.4s ease-in forwards;


}

.closeMenu {
  animation: menuDisappear 0.4s ease-in forwards;
}

@keyframes menuAppear {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes menuDisappear {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}


@media only screen and (max-width: 1180px) {
   .headerText{
    font-size: 25px;
    left: 3%;
    width: auto;
    letter-spacing: 17px;
  }
  .companyName {
        left: 30%;
  }

}


@media only screen and (max-width: 980px) {
   .headerText{
     width: 400px;
     left: 50%;
     top: 30%;
     transform: translate(-50%, -50%);
     font-size: 1.8rem;
     letter-spacing: 40px;
   }

    .burger{
    margin-right: 20px;
    margin-top: 30px;
   }

   .navigation{
     width:100%;
   }

}

